# c_server

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  Dockerfile.test  Makefile  README.md  conanfile.txt  docker-compose.dev.yml  docker-compose.test.yml  generate_template_to_h.sh  init.sh  main.c
.github/workflows/: test.yml
src/common/config/: config.c  config.h
src/common/context/: context.c  context.h
src/common/converter/: converter.h
src/common/logger/: logger.c  logger.h
src/domain/model/: user.c  user.h
src/infrastructure/file/: file.c  file.h
src/infrastructure/http/: http.c  http.h  router.c  router.h  static.c  static.h  thread_pool.c  thread_pool.h
src/infrastructure/http/static/: static.html  static.html.h
src/infrastructure/http/static/nest/: nest_static.html  nest_static.html.h
src/infrastructure/http/template/: hello.html  hello.html.h  index.html  index.html.h
src/infrastructure/mysql/: mysql.c  mysql.h
src/infrastructure/mysql/connection_pool/: connection_pool.c  connection_pool.h
src/infrastructure/mysql/migration/: migration.c  migration.h
src/infrastructure/mysql/repository/: user_repository.c  user_repository.h
src/infrastructure/mysql/template/: delete_user.sql  delete_user.sql.h  get_user.sql  get_user.sql.h  insert_user.sql  insert_user.sql.h
src/infrastructure/sqlite3/: sqlite3.c
src/repository/: user_repository.h
src/utils/equal_str/: equal_str.c  equal_str.h
src/utils/hash_map/: hash_map.c  hash_map.h
src/utils/linked_str_list/: linked_str_list.c  linked_str_list.h
src/utils/map/: map.c  map.h
src/utils/num/: num.c  num.h
src/utils/split/: split.c  split.h
src/utils/str/: str.c  str.h
src/utils/trim/: trim.c  trim.h
src/utils/type/: union.c  union.h
src/utils/uri/: uri.c  uri.h
src/utils/uuid/: uuid.c  uuid.h
test/: test.cpp
test/common/config/: config.cpp
test/common/logger/: logger.cpp
test/infrastructure/file/: file.cpp  testfile.txt
test/infrastructure/http/: static.cpp
test/infrastructure/mysql/: mysql.cpp  mysql.h
test/infrastructure/mysql/connection_pool/: connection_pool.cpp
test/infrastructure/mysql/migration/: migration.cpp  migration.h
test/infrastructure/mysql/repository/: user_repository.cpp
test/utils/equal_str/: equal_str.cpp
test/utils/linked_str_list/: linked_str_list.cpp
test/utils/split/: split.cpp
test/utils/str/: str.cpp
test/utils/uri/: uri.cpp
test/utils/uuid/: uuid.cpp
